hphp/test/slow/parser/hh-reserved-name-self-1.php.expectf
Fatal error: Cannot use `Self` as a type name as it is reserved in %s on line 3
